--- a/app/views/welcome/sample.html.erb
+++ b/app/views/welcome/sample.html.erb
@@ -1,9 +1,8 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Welcome#sample</h1>
+<p>Find me in app/views/welcome/sample.html.erb</p>
 
-<%# Comment %>
-<%= "Count to 10" %>
-<br />
-<% 11.times do |i| %>
-	<%= i %>
-<% end %>
+<%= "Message from controller : #{@controller_message}" %>
+
+<%= link_to("Go to Index", {:controller => 'welcome',
+			    :action => 'index',
+			    :id => 5, :random => "Miguel"}) %>
